@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.7" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.6.0" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.tulip" version="2.2.4" />
@@ -18,33 +18,13 @@
 		<website>http://www.subtitles.gr/</website>
 		<platform>all</platform>
 		<language>el</language>
-		<news>
-[B]1.5.7[/B]
-- Instantiate query variable in run function
-- Search tv shows/series subtitles with dual queries to maximize subtitles match
-- Add clear cache function
-- Notify user when search term might be too broad or incorrect
-- Increased sleep timeout from 500 ms to 750 for threaded requests
-- Increased number of possible requests before exiting the loop for threaded requests
-- Made regexes less aggressive
-
-[B]1.5.5 - 1.5.6[/B]
-- Log exceptions and queries for debugging purposes
-- Rename subtitle in order to mitigate illegal chars for filesystems that struggle with them
-
-[B]1.5.3 - 1.5.4[/B]
-- Improved subtitle search for tv shows
-- Improved handling of subtitles choice on multisubs archives
-- Boolean check of archive format with is_zipfile instead of endswith
-- Various other tweaks
-
-[B]1.5.0 - 1.5.2[/B]
-- Fixed subz.xyz (by not loading the xbmcvfs module through kodi_six)
-- Subtitles search can also be performed via listitem query (useful when searching via context menu)
-- Tweaked string formatting on all modules
-- Added Python 3 compatibility (not yet tested)
-- Implemented capability to select subtitle from rar archives that have multiple subtitles (up to second subdirectory level)
-- Bump dependencies
-		</news>
+		<news>[B]1.6.0[/B]
+- Tweaked conditionals for match on subzxyz
+- Subtitles.gr:
+  > requested html will now replace errors when decoding
+  > query formatting is now a unicode object instead of string
+  > skip items without "flags/el.gif" instead of raising exception
+- Increased urls requested from subz.xyz and reversed order
+- Greatly improved searches with manual queries</news>
 	</extension>
 </addon>
