@@ -1,3 +1,12 @@
+[B]1.6.0[/B]
+- Tweaked conditionals for match on subzxyz
+- Subtitles.gr:
+  > requested html will now replace errors when decoding
+  > query formatting is now a unicode object instead of string
+  > skip items without "flags/el.gif" instead of raising exception
+- Increased urls requested from subz.xyz and reversed order
+- Greatly improved searches with manual queries
+
 [B]1.5.7[/B]
 - Instantiate query variable in run function
 - Search tv shows/series subtitles with dual queries to maximize subtitles match
